# warcraft-data

./: Cargo.toml  flake.nix
crates/warcraft-api/: Cargo.toml
crates/warcraft-api/src/: ability_tables.rs  balance_overlay_regression.rs  catalog.rs  db.rs  keybind.rs  keybind_mirrors.rs  keycode.rs  lib.rs  meta.rs  object.rs  object_lookup.rs  primitives.rs  race.rs  system_hotkeys_category.rs  test.rs  unit_catalog.rs  unit_kind.rs  variant_groups.rs
crates/warcraft-api/src/application/: api.rs  command_catalog.rs  mod.rs  unit_catalog.rs
crates/warcraft-api/src/domain/: building.rs  catalog.rs  combat.rs  command.rs  grid.rs  hero.rs  identity.rs  item.rs  mod.rs  object.rs  player.rs  race.rs  unit.rs  upgrade.rs  version.rs
crates/warcraft-api/src/infrastructure/: database.rs  mod.rs
crates/warcraft-api/tests/: balance_overlay.rs  database_invariants.rs
crates/warcraft-keybinds/: Cargo.toml
crates/warcraft-keybinds/fixtures/: resolved_default_customkeys.txt
crates/warcraft-keybinds/src/: custom_keys.rs  ddd_conformance.rs  editor_history.rs  lib.rs  model.rs
crates/warcraft-keybinds/src/cascade/: conflict_graph.rs  planner.rs  queue.rs
crates/warcraft-keybinds/src/collision/: cross_unit.rs  island_partition.rs  mod.rs  summary.rs  unit_report.rs
crates/warcraft-keybinds/src/command/: move_request.rs
crates/warcraft-keybinds/src/custom_keys/: mirrors.rs  mod.rs  mutate.rs  normalize.rs  overlay.rs  parser.rs  resolve.rs  tests.rs
crates/warcraft-keybinds/src/display/: ability_cell.rs  grid_behavior.rs  inspector_detail.rs  mod.rs  object_display.rs  rendered_grid.rs  templates.rs
crates/warcraft-keybinds/src/grid/: layout.rs
crates/warcraft-keybinds/src/identity/: ability_id.rs  hotkey_target.rs  hotkey_token.rs  mod.rs  slot.rs
crates/warcraft-keybinds/src/model/: ability_binding.rs  binding_entry.rs  command_binding.rs  command_entry.rs  hotkey.rs  mod.rs  section.rs  system_binding.rs  warcraft_keybinding.rs
crates/warcraft-keybinds/src/statistics/: attack.rs  hero.rs  matchup.rs  mod.rs  unit_statistics.rs  values.rs
crates/warcraft-keybinds/src/system/: binding_map.rs
crates/warcraft-keybinds/src/text/: color_codes.rs  command_label.rs  inner_spaces.rs  level_markers.rs
crates/warcraft-keybinds/src/unit/: ability_rules.rs  alt_state.rs  keyed.rs  listing.rs  menu_commands.rs  mod.rs  slot_containers.rs  (+1 more)
crates/warcraft-keybinds/templates/: CustomKeys.txt  CustomKeys_Clemens_DotA_AZERTY.txt  CustomKeys_Clemens_DotA_QWERTY.txt  CustomKeys_Clemens_DotA_QWERTZ.txt  CustomKeys_Neo_AZERTY.txt  CustomKeys_Neo_QWERTY.txt  CustomKeys_Neo_QWERTZ.txt
crates/warcraft-primitives/: Cargo.toml
crates/warcraft-primitives/src/: lib.rs
(+177 files in other folders)
