[package]
name = "warcraft-api"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Pure data types for Warcraft III game objects (units, abilities, items, upgrades)."

[dependencies]
ddd.workspace = true
serde.workspace = true
serde_json.workspace = true
warcraft-primitives = { path = "../warcraft-primitives" }
